# sorch

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python.yaml
app/: README.md  app.py
app/pages/: 1_Search_Files.py
scripts/: index_files.py  search_index.py
sorch/: embedding.py  file_utils.py  model_utils.py  pinecone_utils.py
